# RECoDe

./: .gitignore  README.md  pyproject.toml
data/annotation/: .gitignore
data/extraction/input/: PMC10142012.json  PMC10576543.json
data/extraction/resources/: eng_us_uk.txt
scripts/: pipeline.py
scripts/exp/: .ignore  download_files.py  evaluate.py  get_metrics.py  run.py
scripts/preprocessing/: 0_generate_candidates.py
src/recode/: __init__.py  classifier_base.py  metrics.py  read.py
src/recode/bioc/: __init__.py  bioc_annotation.py  bioc_collection.py  bioc_document.py  bioc_location.py  bioc_node.py  bioc_passage.py  bioc_reader.py  bioc_relation.py  bioc_sentence.py  bioc_writer.py
src/recode/bioc/compat/: __init__.py  _py2_next.py
src/recode/bioc/meta/: __init__.py  _bioc_meta.py
src/recode/logic/: __init__.py  c1first.py  c2asso.py  c3corr.py  c4middleasso.py  c5assocausal.py  c6containsubsti.py  c7pos_corr_reflection.py  predict.py
src/recode/utils/: __init__.py  abbr_extractor.py  plain_abbr.py  re_candidates_generator.py  reader.py  sentence_splitter.py  type_def.py
